--- a/app/src/main/res/layout/activity_pet_selection.xml
+++ b/app/src/main/res/layout/activity_pet_selection.xml
@@ -26,63 +26,20 @@
             android:text="Para qual pet deseja agendar este serviço?"
             android:textAlignment="center" />
 
-        <ScrollView
-            android:id="@+id/scroll_view"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/pet_subtitle">
 
-            <RelativeLayout
-                android:id="@+id/pet_selection_box"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Button
-                    android:id="@+id/pet_button_1"
-                    style="@style/content_selection_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:text="Fluffy" />
-
-                <Button
-                    android:id="@+id/pet_button_2"
-                    style="@style/content_selection_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_toEndOf="@id/pet_button_1"
-                    android:text="Kira" />
-
-                <Button
-                    android:id="@+id/pet_button_3"
-                    style="@style/content_selection_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/pet_button_1"
-                    android:layout_marginHorizontal="10dp"
-                    android:text="Spike" />
-
-                <Button
-                    android:id="@+id/pet_button_4"
-                    style="@style/content_selection_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/pet_button_2"
-                    android:layout_marginStart="10dp"
-                    android:layout_toEndOf="@id/pet_button_1"
-                    android:text="Mel" />
-
-            </RelativeLayout>
-
-        </ScrollView>
+        </androidx.recyclerview.widget.RecyclerView>
 
         <Button
             android:id="@+id/return_button"
             style="@style/small_secondary_action_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/scroll_view"
+            android:layout_below="@id/recycler_view"
             android:layout_marginStart="10dp"
             android:text="@string/go_back" />
 
@@ -91,7 +48,7 @@
             style="@style/small_main_action_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/scroll_view"
+            android:layout_below="@id/recycler_view"
             android:layout_marginStart="20dp"
             android:layout_toEndOf="@id/return_button"
             android:text="@string/go_forward" />
