--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -95,7 +95,8 @@
                 android:layout_alignStart="@id/forms_password_text_view"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/default_edit_text_background"
-                android:hint="@string/hidden_password" />
+                android:hint="@string/hidden_password"
+                android:inputType="textPassword" />
 
             <TextView
                 android:id="@+id/forms_password_confirmation_text_view"
@@ -115,7 +116,8 @@
                 android:layout_alignStart="@id/forms_password_confirmation_text_view"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/default_edit_text_background"
-                android:hint="@string/hidden_password" />
+                android:hint="@string/hidden_password"
+                android:inputType="textPassword" />
 
             <Button
                 android:id="@+id/signup_button"
