--- a/app/src/main/res/layout/adapter_service_item.xml
+++ b/app/src/main/res/layout/adapter_service_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/service_card_view"
     style="@style/default_card_view"
     android:layout_width="match_parent"
@@ -20,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Banho"
+            tools:text="Banho"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="R$ 34,90"
+            tools:text="R$ 34,90"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/card_title" />
 
@@ -40,7 +41,7 @@
             android:layout_width="336dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/shorter_lorem_ipsum"
+            tools:text="@string/shorter_lorem_ipsum"
             app:layout_constraintStart_toStartOf="@id/card_title"
             app:layout_constraintTop_toBottomOf="@id/card_title" />
 
