--- a/app/src/main/res/layout/activity_booking_confirmation.xml
+++ b/app/src/main/res/layout/activity_booking_confirmation.xml
@@ -214,6 +214,7 @@
         android:id="@+id/booking_success"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         >
 
         <ImageButton
