feat: correções básicas de espaçamento nos xml de seleção de pet

--- a/app/src/main/res/layout/adapter_pet_selection_item.xml
+++ b/app/src/main/res/layout/adapter_pet_selection_item.xml
@@ -4,4 +4,5 @@
     style="@style/content_selection_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginStart="14dp"
     android:text="Fluffy" />
