--- a/app/src/main/res/layout/activity_pet_selection.xml
+++ b/app/src/main/res/layout/activity_pet_selection.xml
@@ -20,7 +20,7 @@
         <TextView
             android:id="@+id/pet_subtitle"
             style="@style/default_subtitle_text_view"
-            android:layout_width="364dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:text="Para qual pet deseja agendar este serviço?"
