--- a/app/src/main/res/layout/adapter_booking_item.xml
+++ b/app/src/main/res/layout/adapter_booking_item.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="136dp"
     android:layout_marginHorizontal="16dp"
-    android:minHeight="136dp">
+    android:minHeight="136dp"
+    android:layout_marginBottom="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
