--- a/app/src/main/res/layout/fragment_booking_list.xml
+++ b/app/src/main/res/layout/fragment_booking_list.xml
@@ -33,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:paddingBottom="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/section_title">
 
