--- a/app/src/main/res/layout/activity_pet_gender.xml
+++ b/app/src/main/res/layout/activity_pet_gender.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -86,27 +87,5 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <Button
-        android:id="@+id/return_button"
-        style="@style/small_secondary_action_button"
-        android:layout_width="152dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/go_back"
-        android:onClick="back"
-        app:layout_constraintStart_toStartOf="@id/male_card_view"
-        app:layout_constraintTop_toBottomOf="@id/male_card_view" />
-
-    <Button
-        android:id="@+id/continue_button"
-        style="@style/small_main_action_button"
-        android:layout_width="152dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:text="@string/go_forward"
-        android:onClick="next"
-        app:layout_constraintStart_toEndOf="@id/return_button"
-        app:layout_constraintTop_toTopOf="@id/return_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
