--- a/app/src/main/res/layout/activity_profile_data.xml
+++ b/app/src/main/res/layout/activity_profile_data.xml
@@ -47,7 +47,7 @@
                 android:layout_alignParentTop="true"
                 android:text="@string/name" />
 
-            <EditText
+            <TextView
                 android:id="@+id/name_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -66,7 +66,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="@string/email" />
 
-            <EditText
+            <TextView
                 android:id="@+id/email_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -85,7 +85,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="Data de nascimento" />
 
-            <EditText
+            <TextView
                 android:id="@+id/birth_date_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="Telefone" />
 
-            <EditText
+            <TextView
                 android:id="@+id/phone_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -123,7 +123,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="CPF" />
 
-            <EditText
+            <TextView
                 android:id="@+id/cpf_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -142,7 +142,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="CEP" />
 
-            <EditText
+            <TextView
                 android:id="@+id/cep_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -161,7 +161,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="Estado" />
 
-            <EditText
+            <TextView
                 android:id="@+id/state_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -180,7 +180,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="Cidade" />
 
-            <EditText
+            <TextView
                 android:id="@+id/city_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -199,7 +199,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="Bairro" />
 
-            <EditText
+            <TextView
                 android:id="@+id/district_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -218,7 +218,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="Rua" />
 
-            <EditText
+            <TextView
                 android:id="@+id/street_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
@@ -237,7 +237,7 @@
                 android:layout_alignStart="@id/name_edit_text"
                 android:text="Número" />
 
-            <EditText
+            <TextView
                 android:id="@+id/number_edit_text"
                 style="@style/default_edit_text"
                 android:layout_width="wrap_content"
