--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -32,9 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Ana Beatriz"
         app:layout_constraintStart_toStartOf="@id/profile_icon"
-        app:layout_constraintTop_toBottomOf="@id/profile_icon" />
+        app:layout_constraintTop_toBottomOf="@id/profile_icon"
+        tools:text="Ana Beatriz" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/data_card_view"
@@ -203,5 +204,17 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/logout_button"
+        style="@style/vertical_button_with_icon"
+        android:layout_width="104dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="32dp"
+        android:drawableTop="@drawable/baseline_exit_to_app_24"
+        android:text="@string/logout"
+        app:layout_constraintTop_toBottomOf="@id/favorites_card_view"
+        app:layout_constraintStart_toStartOf="@id/edit_button"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
