--- a/app/src/main/res/layout/activity_pet_gender.xml
+++ b/app/src/main/res/layout/activity_pet_gender.xml
@@ -10,7 +10,6 @@
         style="@style/arrow_back_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,6 +21,7 @@
         android:layout_marginTop="152dp"
         android:text="Selecione o sexo do seu pet"
         android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/arrow_back" />
 
@@ -29,8 +29,8 @@
         android:id="@+id/male_card_view"
         android:layout_width="152dp"
         android:layout_height="152dp"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toStartOf="@id/female_card_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/section_title">
 
@@ -61,7 +61,7 @@
         android:id="@+id/female_card_view"
         android:layout_width="152dp"
         android:layout_height="152dp"
-        android:layout_marginStart="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/male_card_view"
         app:layout_constraintTop_toTopOf="@id/male_card_view">
 
