--- a/app/src/main/res/layout/activity_pet_name.xml
+++ b/app/src/main/res/layout/activity_pet_name.xml
@@ -9,7 +9,6 @@
         style="@style/arrow_back_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,6 +20,7 @@
         android:layout_marginTop="192dp"
         android:text="Digite o nome do seu pet"
         android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/arrow_back" />
 
@@ -29,10 +29,9 @@
         style="@style/default_forms_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:text="@string/name"
-        app:layout_constraintStart_toStartOf="@id/section_title"
+        app:layout_constraintStart_toStartOf="@id/name_edit_text"
         app:layout_constraintTop_toBottomOf="@id/section_title" />
 
     <EditText
@@ -40,11 +39,11 @@
         style="@style/default_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:background="@drawable/default_edit_text_background"
         android:hint="Digite um nome aqui"
-        app:layout_constraintStart_toStartOf="@id/name_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name_text_view" />
 
     <Button
@@ -53,7 +52,6 @@
         android:layout_width="152dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:onClick="back"
         android:text="@string/go_back"
         app:layout_constraintStart_toStartOf="@id/name_edit_text"
         app:layout_constraintTop_toBottomOf="@id/name_edit_text" />
@@ -63,10 +61,8 @@
         style="@style/small_main_action_button"
         android:layout_width="152dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:onClick="confirm"
         android:text="@string/confirm"
-        app:layout_constraintStart_toEndOf="@id/return_button"
+        app:layout_constraintEnd_toEndOf="@id/name_edit_text"
         app:layout_constraintTop_toTopOf="@id/return_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
