--- a/app/src/main/res/layout/activity_booking_history.xml
+++ b/app/src/main/res/layout/activity_booking_history.xml
@@ -100,7 +100,7 @@
                 <TextView
                     android:id="@+id/pet_name"
                     style="@style/regular_text_view"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     tools:text="Fluffy"
